@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 1.3-3
-Date: 2021-02-24
+Date: 2021-03-03
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Contact: Doug and Martin <Matrix-authors@R-project.org>
